--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Chemotaxis</title>
+		<title>Asteroids</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Chemotaxis</h1>
+			<h1><h1><a href= https://github.com/adcarmona/AsteroidsGame> Asteroids (Part One) </a></h1></h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Max
+		    <p>- Use the UP key to boost</p>
+		    <p>- Use the LEFT and RIGHT keys to turn</p>
+		    <p>- Use the DOWN key to go into hyperspace</p>
 	    </footer>
 	</body>
 </html>
