Removed unused Netto fonts.

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    <p>- Use the UP key to boost</p>
-		    <p>- Use the LEFT and RIGHT keys to turn</p>
-		    <p>- Use the DOWN key to go into hyperspace</p>
+		    <p>Use the UP key to boost</p>
+		    <p>Use the LEFT and RIGHT keys to turn</p>
+		    <p>Use the DOWN key to go into hyperspace</p>
 	    </footer>
 	</body>
 </html>
