--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1><h1><a href= https://github.com/adcarmona/AsteroidsGame> Asteroids (Part One) </a></h1></h1>
+			<h1><h1><a href= https://github.com/adcarmona/AsteroidsGame> Asteroids (Part Three) </a></h1></h1>
 		</header>
 			<section id="content">
 				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
