Changed some information.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		    <p>Use the UP key to boost</p>
 		    <p>Use the LEFT and RIGHT keys to turn</p>
 		    <p>Use the DOWN key to go into hyperspace</p>
+		    <p>Use the CONTROL key to boost around quickly<p>
 	    </footer>
 	</body>
 </html>
